@@ -1,10 +1,15 @@
-# $Id: Changes,v 1.136 2004/09/16 03:45:59 petdance Exp $
+# $Id: Changes,v 1.137 2004/09/16 04:20:07 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 1.04
 
         [ENHANCEMENTS]
         * $mech->get() now accepts a WWW::Mechanize::Link object.
+
+        * $mech->stack_depth(n) lets you set the depth of the mech
+          object's page stack.  This way, if you have a Mech that does
+          lots of stuff and never/rarely goes back(), you won't be eating
+          up memory.  Thanks to BooK and Chi-Fung. (RT #5362)
 
         [FIXES]
         * Fixed tests that fail under LWP >= 5.800.
